@@ -41,6 +41,7 @@ For fixes or providing information which led to a fix:
           Peter Gavin
            Eric Gillespie, Jr
          Didier Godefroy
+  Panicz Maciej Godek
            John Goerzen
            Mike Gran
          Szavai Gyula
